--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <section class="hero">
-        <img src="banner.jpg" alt="Shipping Truck" class="hero-bg-img">
+        <img src="banner.jpeg" alt="Shipping Truck" class="hero-bg-img">
         <div class="hero-overlay"></div>
         
         <div class="container">
