--- a/details.html
+++ b/details.html
@@ -66,7 +66,7 @@
                         </div>
                     </div>
 
-                    <div class="form-section-title">Billing Address (If different from Shipping)</div>
+                    <div class="form-section-title">Billing Address</div>
                     <div class="form-col" style="margin-bottom: 20px;">
                         <label>Street Address</label>
                         <input type="text" name="Billing Street">
